[gd_scene load_steps=15 format=3 uid="uid://c0jo5sp57nwco"]

[ext_resource type="Texture2D" uid="uid://dfsjf7dad1lis" path="res://assets/sprites/tattoo_tiles.png" id="1_wse65"]
[ext_resource type="Script" path="res://scripts/TileMap.gd" id="2_vbte6"]
[ext_resource type="Texture2D" uid="uid://beu7jwgu15pxx" path="res://assets/sprites/cut/culo.png" id="3_u8y5e"]
[ext_resource type="Texture2D" uid="uid://cfa0sa45r34ur" path="res://assets/sprites/cut/mano.png" id="4_d262r"]
[ext_resource type="Script" path="res://scripts/bar.gd" id="4_gu5of"]
[ext_resource type="Texture2D" uid="uid://gv66b027y732" path="res://assets/sprites/bar/barv2.png" id="5_iwua7"]
[ext_resource type="Texture2D" uid="uid://b4h6xay1spf62" path="res://assets/sprites/bar/barsquare.png" id="6_0mfk6"]
[ext_resource type="Texture2D" uid="uid://g1chfe7wn73s" path="res://assets/sprites/bar/barindicator.png" id="7_ntnhp"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2nfot"]
texture = ExtResource("1_wse65")
texture_region_size = Vector2i(4, 4)
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_43dk2"]
tile_size = Vector2i(4, 4)
sources/0 = SubResource("TileSetAtlasSource_2nfot")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7f02g"]
size = Vector2(20, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lfq46"]
size = Vector2(20, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oqnd1"]
size = Vector2(6, 31)

[sub_resource type="CircleShape2D" id="CircleShape2D_buygm"]
radius = 3.16228

[node name="Gameplay" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-2, 0)

[node name="TileMap" type="TileMap" parent="."]
z_index = 1
position = Vector2(-2, 0)
tile_set = SubResource("TileSet_43dk2")
format = 2
layer_0/name = "Background"
layer_0/tile_data = PackedInt32Array(1572963, 0, 0, 1507427, 0, 0, 1441890, 0, 0, 1376353, 0, 0, 1310817, 0, 0, 1310816, 0, 0, 1245280, 0, 0, 1179743, 0, 0, 1114207, 0, 0, 1114206, 0, 0, 1048670, 0, 0, 1048669, 0, 0, 983133, 0, 0, 917597, 0, 0, 852061, 0, 0, 852060, 0, 0, 786524, 0, 0, 720988, 0, 0, 655452, 0, 0, 655451, 0, 0, 589915, 0, 0, 524379, 0, 0, 458843, 0, 0, 393307, 0, 0, 327771, 0, 0, 262235, 0, 0, 196699, 0, 0, 131163, 0, 0, 65627, 0, 0, 91, 0, 0, -65445, 0, 0, -130981, 0, 0, -196517, 0, 0, -262053, 0, 0, -130982, 0, 0, -65446, 0, 0, -65447, 0, 0, -65448, 0, 0, -65449, 0, 0, -130985, 0, 0, -130986, 0, 0, -196522, 0, 0, -196523, 0, 0, -262059, 0, 0, -262060, 0, 0, -327596, 0, 0, -393133, 0, 0, -458669, 0, 0, -524206, 0, 0, -589742, 0, 0, -655278, 0, 0, -720814, 0, 0, -786350, 0, 0, -786349, 0, 0, -851885, 0, 0, -851884, 0, 0, -917420, 0, 0, -917419, 0, 0, -982955, 0, 0, -982954, 0, 0, -982953, 0, 0, -1048489, 0, 0, -1048488, 0, 0, -1048487, 0, 0, -1048486, 0, 0, -1048485, 0, 0, -982948, 0, 0, -982947, 0, 0, -982946, 0, 0, -982945, 0, 0, -917408, 0, 0, -917407, 0, 0, -851871, 0, 0, -851870, 0, 0, -786334, 0, 0, -720798, 0, 0, -655262, 0, 0, -589725, 0, 0, -524189, 0, 0, -458653, 0, 0, -458654, 0, 0, -393118, 0, 0, -327583, 0, 0, -262047, 0, 0, -262048, 0, 0, -262049, 0, 0, -262050, 0, 0, -196514, 0, 0, -196515, 0, 0, -196516, 0, 0, -130983, 0, 0, -65450, 0, 0, 86, 0, 0, 65622, 0, 0, 131158, 0, 0, 196694, 0, 0, 262230, 0, 0, 327766, 0, 0, 393302, 0, 0, 458838, 0, 0, 524374, 0, 0, 524373, 0, 0, 589909, 0, 0, 589908, 0, 0, 655444, 0, 0, 720979, 0, 0, 720978, 0, 0, 720977, 0, 0, 786512, 0, 0, 786511, 0, 0, 786510, 0, 0, 852045, 0, 0, 852044, 0, 0, 852043, 0, 0, 852042, 0, 0, 852041, 0, 0, 786504, 0, 0, 786503, 0, 0, 720966, 0, 0, 655430, 0, 0, 589893, 0, 0, 524357, 0, 0, 458821, 0, 0, 458822, 0, 0, 393286, 0, 0, 327750, 0, 0, 262215, 0, 0, 196679, 0, 0, 196680, 0, 0, 131145, 0, 0, 65609, 0, 0, 65610, 0, 0, 75, 0, 0, -65461, 0, 0, -65460, 0, 0, -130995, 0, 0, -196530, 0, 0, -262066, 0, 0, -262065, 0, 0, -327600, 0, 0, -327599, 0, 0, -458670, 0, 0, -458671, 0, 0, -524207, 0, 0, -524208, 0, 0, -589744, 0, 0, -655281, 0, 0, -655282, 0, 0, -720819, 0, 0, -786355, 0, 0, -851892, 0, 0, -917429, 0, 0, -982966, 0, 0, -1048503, 0, 0, -1114039, 0, 0, -1179576, 0, 0, -1245112, 0, 0, -1310648, 0, 0, -1376185, 0, 0, -1441721, 0, 0, -1507257, 0, 0, -1572793, 0, 0, -1638329, 0, 0, -1703865, 0, 0, -1769401, 0, 0, -1834936, 0, 0, -1900472, 0, 0, -1966007, 0, 0, -2031543, 0, 0, -2097079, 0, 0, -2097078, 0, 0, -2162614, 0, 0, -2162613, 0, 0, -2228148, 0, 0, -2228147, 0, 0, -2293682, 0, 0, -2228145, 0, 0, -2162609, 0, 0, -2097072, 0, 0, -2031536, 0, 0, -1966000, 0, 0, -1900463, 0, 0, -1834927, 0, 0, -1769391, 0, 0, -1769390, 0, 0, -1703854, 0, 0, -1638318, 0, 0, -1572782, 0, 0, -1507246, 0, 0, -1507245, 0, 0, -1441709, 0, 0, -1376173, 0, 0, -1310637, 0, 0, -1245101, 0, 0, -1179565, 0, 0, -1114029, 0, 0, -1114028, 0, 0, -1048492, 0, 0, -982956, 0, 0, -1048490, 0, 0, -1114025, 0, 0, -1179561, 0, 0, -1245096, 0, 0, -1310631, 0, 0, -1376166, 0, 0, -1441701, 0, 0, -1507236, 0, 0, -1572772, 0, 0, -1572771, 0, 0, -1638306, 0, 0, -1703841, 0, 0, -1703840, 0, 0, -1703839, 0, 0, -1703838, 0, 0, -1769374, 0, 0, -1769373, 0, 0, -1769372, 0, 0, -1769371, 0, 0, -1769370, 0, 0, -1703833, 0, 0, -1638297, 0, 0, -1572761, 0, 0, -1507224, 0, 0, -1441688, 0, 0, -1376152, 0, 0, -1376153, 0, 0, -1310617, 0, 0, -1245081, 0, 0, -1245082, 0, 0, -1179547, 0, 0, -1179548, 0, 0, -1114012, 0, 0, -1114013, 0, 0, -1114014, 0, 0, -1048479, 0, 0, -1048480, 0, 0, -917406, 0, 0, -917405, 0, 0, -917404, 0, 0, -917403, 0, 0, -917402, 0, 0, -917401, 0, 0, -917400, 0, 0, -982935, 0, 0, -982934, 0, 0, -982933, 0, 0, -982932, 0, 0, -982931, 0, 0, -982930, 0, 0, -982929, 0, 0, -982928, 0, 0, -982927, 0, 0, -982926, 0, 0, -982925, 0, 0, -917389, 0, 0, -851852, 0, 0, -851851, 0, 0, -786315, 0, 0, -720779, 0, 0, -655243, 0, 0, -589707, 0, 0, -589708, 0, 0, -524172, 0, 0, -524173, 0, 0, -458638, 0, 0, -393103, 0, 0, -393104, 0, 0, -327569, 0, 0, -327570, 0, 0, -327571, 0, 0, -327572, 0, 0, -327573, 0, 0, -327574, 0, 0, -327575, 0, 0, -327576, 0, 0, -327577, 0, 0, -327578, 0, 0, -327579, 0, 0, -327580, 0, 0, -393116, 0, 0, -393117, 0, 0, 1572964, 0, 0, 1507428, 0, 0, 1441893, 0, 0, 1376358, 0, 0, 1376359, 0, 0, 1310823, 0, 0, 1310824, 0, 0, 1245288, 0, 0, 1179753, 0, 0, 1114217, 0, 0, 1114218, 0, 0, 1048682, 0, 0, 1048683, 0, 0, 983147, 0, 0, 983148, 0, 0, 917612, 0, 0, 917613, 0, 0, 917614, 0, 0, 852078, 0, 0, 852079, 0, 0, 852080, 0, 0, 852081, 0, 0, 852082, 0, 0, 917618, 0, 0, 983155, 0, 0, 1048691, 0, 0, 1048692, 0, 0, 1114228, 0, 0, 1179763, 0, 0, 1245299, 0, 0, 1245298, 0, 0, 1310833, 0, 0, 1376368, 0, 0, 1376367, 0, 0, 1376366, 0, 0, 1441901, 0, 0, 1441900, 0, 0, 1441899, 0, 0, 1441898, 0, 0, 1507434, 0, 0, 1507433, 0, 0, 1507432, 0, 0, 1572967, 0, 0, 1572966, 0, 0, 1572965, 0, 0, 1638500, 0, 0, 1507430, 0, 0, 1507431, 0, 0, 1441896, 0, 0, 1441897, 0, 0, 1376363, 0, 0, 1310827, 0, 0, 1310828, 0, 0, 1310829, 0, 0, 1245293, 0, 0, 1245294, 0, 0, 1179758, 0, 0, 1572962, 0, 0, 1507426, 0, 0, 1507425, 0, 0, 1441889, 0, 0, 1441888, 0, 0, 1376351, 0, 0, 1310815, 0, 0, 1310814, 0, 0, 1310813, 0, 0, 1310812, 0, 0, 1245276, 0, 0, 1245275, 0, 0, 1245274, 0, 0, 1245273, 0, 0, 1245272, 0, 0, 1179736, 0, 0, 1179735, 0, 0, 1179734, 0, 0, 1179733, 0, 0, 1179732, 0, 0, 1179731, 0, 0, 1245267, 0, 0, 1310803, 0, 0, 1310802, 0, 0, 1376338, 0, 0, 1441874, 0, 0, 1507411, 0, 0, 1572947, 0, 0, 1572948, 0, 0, 1638484, 0, 0, 1638485, 0, 0, 1704021, 0, 0, 1704022, 0, 0, 1704023, 0, 0, 1704024, 0, 0, 1704025, 0, 0, 1704026, 0, 0, 1769563, 0, 0, 1769564, 0, 0, 1769565, 0, 0, 1769566, 0, 0, 1769567, 0, 0, 1769568, 0, 0, 1769569, 0, 0, 1769570, 0, 0, 1769571, 0, 0, 1769572, 0, 0, 1769573, 0, 0, 1769574, 0, 0, 1704039, 0, 0, 1704040, 0, 0, 1638504, 0, 0, 1638501, 0, 0, 1638499, 0, 0, 1572961, 0, 0, 1572960, 0, 0, 1572959, 0, 0, 1572958, 0, 0, 1572957, 0, 0, 1572956, 0, 0, 1572955, 0, 0, 1572954, 0, 0, 1572953, 0, 0, 1572952, 0, 0, 1572951, 0, 0, 1507415, 0, 0)
layer_1/name = "Tattoo"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()
script = ExtResource("2_vbte6")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -578.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 320.0

[node name="Culo" type="Sprite2D" parent="."]
position = Vector2(285, -1.00001)
scale = Vector2(5.2963, 5.03125)
texture = ExtResource("3_u8y5e")

[node name="Bar" type="Node2D" parent="."]
position = Vector2(-440, 0)
scale = Vector2(4, 4)
script = ExtResource("4_gu5of")

[node name="BaseBar" type="Sprite2D" parent="Bar"]
unique_name_in_owner = true
position = Vector2(-1.5, 0)
texture = ExtResource("5_iwua7")

[node name="Top" type="StaticBody2D" parent="Bar"]
position = Vector2(0, 7.75)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bar/Top"]
position = Vector2(0, -67)
shape = SubResource("RectangleShape2D_7f02g")

[node name="Botton" type="StaticBody2D" parent="Bar"]
position = Vector2(-0.75, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bar/Botton"]
position = Vector2(0, 66)
shape = SubResource("RectangleShape2D_lfq46")

[node name="ZoneBar" type="StaticBody2D" parent="Bar"]
unique_name_in_owner = true

[node name="Sprite2D" type="Sprite2D" parent="Bar/ZoneBar"]
scale = Vector2(1, 0.3)
texture = ExtResource("6_0mfk6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bar/ZoneBar"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_oqnd1")
disabled = true

[node name="PointBar" type="RigidBody2D" parent="Bar"]
unique_name_in_owner = true
gravity_scale = 0.3
lock_rotation = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bar/PointBar"]
shape = SubResource("CircleShape2D_buygm")

[node name="Sprite2D" type="Sprite2D" parent="Bar/PointBar"]
scale = Vector2(2, 2)
texture = ExtResource("7_ntnhp")
centered = false
offset = Vector2(0, -8.5)

[node name="Cursor" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("4_d262r")
centered = false
